apps/production/httpbin/ingress-secureapp.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: pfsense-ca-issuer
    k8s.apisix.apache.org/plugin-config-name: secureapp-oidc
    k8s.apisix.apache.org/upstream-scheme: http
  name: secureapp
  namespace: httpbin
spec:
  ingressClassName: apisix
  rules:
    - host: secureapp.apps.lab.okd.local
      http:
        paths:
          - backend:
              service:
                name: httpbin
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - secureapp.apps.lab.okd.local
      secretName: secureapp-ingress-tls
