apps/production/httpbin/ingress-weave-gitops2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: pfsense-ca-issuer
    k8s.apisix.apache.org/plugin-config-name: weave-gitops-oidc
    k8s.apisix.apache.org/upstream-scheme: http
  name: weave-gitops2
  namespace: httpbin
spec:
  ingressClassName: apisix
  rules:
    - host: weave-gitops2.apps.lab.okd.local
      http:
        paths:
          - backend:
              service:
                name: httpbin
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - weave-gitops2.apps.lab.okd.local
      secretName: weave-gitops-ingress-tls
